--- a/logic/sph3d/sph3d/sph3d.vcxproj.filters
+++ b/logic/sph3d/sph3d/sph3d.vcxproj.filters
@@ -59,5 +59,8 @@
     <ClCompile Include="sphsystem.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Particle.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
